[package]
name = "http-from-scratch"
version = "0.1.0"
authors = ["Danielle Brook-Roberge <danielle.brook-roberge@unbounce.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.4"
lazy_static = "1.4.0"
regex = "1.4.5"
